day-48/ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: statichtml-service-ingress
spec:
  selector: 
    name: static-html-ingress
  ports:
    - port: 80
      targetPort: 80


---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: statichtml-ingress
  labels:
    name: statichtml-ingress
spec:
  rules:
    - host: nginx.dimar.local
      http:
        paths:
          - path: /
            backend:
              serviceName: statichtml-service-ingress
              servicePort: 80
